--- a/003.ms.local/application/configs/application.ini
+++ b/003.ms.local/application/configs/application.ini
@@ -36,7 +36,7 @@ resources.router.routes.city.chains.default.type = "Zend_Controller_Router_Route
 resources.router.routes.city.chains.default.route = ":module/:controller/:action/*"
 
 resources.router.routes.city.chains.catalog.type = "Zend_Controller_Router_Route_Regex" 
-resources.router.routes.city.chains.catalog.route = "catalog/([a-z]{1})/(.+).aspx"
+resources.router.routes.city.chains.catalog.route = "catalog2/([a-z]{1})/(.+).aspx"
 resources.router.routes.city.chains.catalog.map.1 = "char"
 resources.router.routes.city.chains.catalog.map.2 = "name"
 resources.router.routes.city.chains.catalog.defaults.module = "catalog"
