--- a/003.ms.local/application/configs/application.ini
+++ b/003.ms.local/application/configs/application.ini
@@ -8,6 +8,7 @@ bootstrap.class = "Bootstrap"
 appnamespace = "Med"
 
 autoloaderNamespaces[] = "Profbis"
+autoloaderNamespaces[] = "Smlib"
 
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.params.displayExceptions = 1
@@ -109,6 +110,14 @@ mssql.pass = 903
 mssql2.host = MSSQL2
 mssql2.user = sa
 mssql2.pass = 903
+
+dbconn.default.host = MSSQL
+dbconn.default.user = sa
+dbconn.default.pass = 903
+
+dbconn.mssql.host = MSSQL
+dbconn.mssql.user = sa
+dbconn.mssql.pass = 903
 
 resources.layout.layout = "layout"
 
