--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -111,13 +111,17 @@ mssql2.host = MSSQL2
 mssql2.user = sa
 mssql2.pass = 903
 
-dbconn.default.host = MSSQL
+dbconn.default.host = MSSQL2
 dbconn.default.user = sa
 dbconn.default.pass = 903
 
 dbconn.mssql.host = MSSQL
 dbconn.mssql.user = sa
 dbconn.mssql.pass = 903
+
+dbconn.mssql2.host = MSSQL2
+dbconn.mssql2.user = sa
+dbconn.mssql2.pass = 903
 
 resources.layout.layout = "layout"
 
