--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -111,7 +111,7 @@ mssql2.host = MSSQL2
 mssql2.user = sa
 mssql2.pass = 903
 
-dbconn.default.host = MSSQL2
+dbconn.default.host = MSSQL
 dbconn.default.user = sa
 dbconn.default.pass = 903
 
