--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -110,17 +110,17 @@ mssql2.pass = 903
 dbconn.default.host = MSSQL2
 dbconn.default.user = sa
 dbconn.default.pass = 903
-dbconn.default.dtformat = DD.MM.YYYY HH:II:SS
+dbconn.default.dtformat = d.m.Y H:i:s
 
 dbconn.mssql.host = MSSQL
 dbconn.mssql.user = sa
 dbconn.mssql.pass = 903
-dbconn.mssql.dtformat = DD.MM.YYYY HH:II:SS
+dbconn.mssql.dtformat = d.m.Y H:i:s
 
 dbconn.mssql2.host = MSSQL2
 dbconn.mssql2.user = sa
 dbconn.mssql2.pass = 903
-dbconn.mssql2.dtformat = DD.MM.YYYY HH:II:SS
+dbconn.mssql2.dtformat = d.m.Y H:i:s
 
 resources.layout.layout = "layout"
 
